# CoSMPAD_tools

./: Dockerfile  LICENSE.txt  MANIFEST.in  README  README.md  pyproject.toml  requirements.txt  test_local.py
cosmpad_predictor/: __init__.py  api.py  esm_model.py  features.py  label_encoders.pkl  trained_feature_order.pkl
cosmpad_predictor/models/: model_fold_0.json  model_fold_0.pkl  model_fold_1.json  model_fold_1.pkl  model_fold_2.json  model_fold_2.pkl
