[project]
name = "cosmpad_predictor"
version = "0.1.0"
description = "CoSMPAD: Comparative Secretory Microbial Preprotein Activity Database — part of ongoing PhD research, intended for submission and publication."
authors = [
    { name="Rafael", email="morantor@hu-berlin.de" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file="LICENSE" }
dependencies = [
    "torch>=2.0,<3.0",
    "fair-esm==2.0.0",                
    "biopython>=1.80,<1.90",
    "numpy>=1.23,<2.0",
    "peptides==0.5.0",
    "propy3==1.1.1",
    "xgboost>=3.1.3,<4.0",
    "scikit-learn>=1.7.2,<1.8",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
